tests-build/tests/fail/tokio_without_net_missing_net.rs
use tests_build::tokio::net;

fn main() {}
