tests-build/tests/fail/tokio_without_net_missing_net.stderr
error[E0432]: unresolved import `tests_build::tokio::net`
 --> $DIR/tokio_without_net_missing_net.rs:1:5
  |
1 | use tests_build::tokio::net;
  |     ^^^^^^^^^^^^^^^^^^^^^^^ no `net` in `tokio`

For more information about this error, try `rustc --explain E0432`.
